<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context="${relativePackage}.${activityClass}" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/logInButton"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/MainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:src="@drawable/computer149"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/MainLogo"
        android:layout_below="@+id/MainLogo"
        android:textSize="35sp"
        android:text="@string/MainTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:height="35dp"
        android:text="@string/login"
        android:width="35dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logInButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="69dp"
        android:ems="20"
        android:hint="@string/passWordHint"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Password"
        android:layout_alignParentLeft="true"
        android:ems="20"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="30sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>